xerial-core/src/main/java/org/xerial/lens/relation/query/impl/XPathParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 XPath.g 2009-09-29 14:52:03

/*--------------------------------------------------------------------------
 *  Copyright 2009 Taro L. Saito
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 *--------------------------------------------------------------------------*/
//--------------------------------------
// XerialJ
//
// XPathParser.g
// Since: Aug 6, 2009 08:30:02 AM
//
//--------------------------------------
package org.xerial.lens.relation.query.impl;




import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class XPathParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "XPATH", "NAME", "VALUE", "STEP", "AXIS", "PREDICATE", "LineBreakChar", "LineComment", "LineBreak", "Digit", "Letter", "HexDigit", "UnicodeChar", "EscapeSequence", "StringChar", "StringChar_s", "String", "Integer", "Frac", "Exp", "Double", "Comma", "Colon", "UnsafeUnicodeChar", "SafeFirstLetter", "SafeLetter", "WhiteSpace", "QNameChar", "QName", "WhiteSpaces", "'/'", "'//'", "'@'", "'['", "']'", "'='", "'!='", "'>'", "'>='", "'<'", "'<='", "'~='", "'('", "')'"
    };
    public static final int T__42=42;
    public static final int Digit=13;
    public static final int Frac=22;
    public static final int HexDigit=15;
    public static final int T__47=47;
    public static final int STEP=7;
    public static final int VALUE=6;
    public static final int T__39=39;
    public static final int PREDICATE=9;
    public static final int Letter=14;
    public static final int T__46=46;
    public static final int Comma=25;
    public static final int EscapeSequence=17;
    public static final int XPATH=4;
    public static final int Integer=21;
    public static final int WhiteSpace=30;
    public static final int T__34=34;
    public static final int AXIS=8;
    public static final int LineComment=11;
    public static final int Colon=26;
    public static final int T__35=35;
    public static final int SafeFirstLetter=28;
    public static final int T__36=36;
    public static final int Exp=23;
    public static final int QNameChar=31;
    public static final int T__44=44;
    public static final int UnicodeChar=16;
    public static final int StringChar=18;
    public static final int LineBreak=12;
    public static final int T__45=45;
    public static final int String=20;
    public static final int SafeLetter=29;
    public static final int LineBreakChar=10;
    public static final int T__43=43;
    public static final int QName=32;
    public static final int T__40=40;
    public static final int EOF=-1;
    public static final int T__38=38;
    public static final int T__37=37;
    public static final int StringChar_s=19;
    public static final int UnsafeUnicodeChar=27;
    public static final int Double=24;
    public static final int NAME=5;
    public static final int T__41=41;
    public static final int WhiteSpaces=33;

    // delegates
    // delegators


        public XPathParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public XPathParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return XPathParser.tokenNames; }
    public String getGrammarFileName() { return "XPath.g"; }





    public static class xpath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "xpath"
    // XPath.g:162:1: xpath : locationExpr -> ^( XPATH locationExpr ) ;
    public final XPathParser.xpath_return xpath() throws RecognitionException {
        XPathParser.xpath_return retval = new XPathParser.xpath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        XPathParser.locationExpr_return locationExpr1 = null;


        RewriteRuleSubtreeStream stream_locationExpr=new RewriteRuleSubtreeStream(adaptor,"rule locationExpr");
        try {
            // XPath.g:163:3: ( locationExpr -> ^( XPATH locationExpr ) )
            // XPath.g:163:5: locationExpr
            {
            pushFollow(FOLLOW_locationExpr_in_xpath620);
            locationExpr1=locationExpr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_locationExpr.add(locationExpr1.getTree());


            // AST REWRITE
            // elements: locationExpr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 164:3: -> ^( XPATH locationExpr )
            {
                // XPath.g:164:6: ^( XPATH locationExpr )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(XPATH, "XPATH"), root_1);

                adaptor.addChild(root_1, stream_locationExpr.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "xpath"

    public static class locationExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "locationExpr"
    // XPath.g:167:1: fragment locationExpr : ( relativePath | absolutePath );
    public final XPathParser.locationExpr_return locationExpr() throws RecognitionException {
        XPathParser.locationExpr_return retval = new XPathParser.locationExpr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        XPathParser.relativePath_return relativePath2 = null;

        XPathParser.absolutePath_return absolutePath3 = null;



        try {
            // XPath.g:169:3: ( relativePath | absolutePath )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==QName||LA1_0==36) ) {
                alt1=1;
            }
            else if ( (LA1_0==34) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // XPath.g:169:5: relativePath
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_relativePath_in_locationExpr646);
                    relativePath2=relativePath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, relativePath2.getTree());

                    }
                    break;
                case 2 :
                    // XPath.g:170:5: absolutePath
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_absolutePath_in_locationExpr652);
                    absolutePath3=absolutePath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, absolutePath3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "locationExpr"

    public static class relativePath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "relativePath"
    // XPath.g:173:1: fragment relativePath : ( step -> ^( STEP step ) | ( step '/' )=> step '/' relativePath -> ^( STEP AXIS[\"PC\"] step relativePath ) | ( step '//' )=> step '//' relativePath -> ^( STEP AXIS[\"AD\"] step relativePath ) );
    public final XPathParser.relativePath_return relativePath() throws RecognitionException {
        XPathParser.relativePath_return retval = new XPathParser.relativePath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal6=null;
        Token string_literal9=null;
        XPathParser.step_return step4 = null;

        XPathParser.step_return step5 = null;

        XPathParser.relativePath_return relativePath7 = null;

        XPathParser.step_return step8 = null;

        XPathParser.relativePath_return relativePath10 = null;


        Object char_literal6_tree=null;
        Object string_literal9_tree=null;
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_relativePath=new RewriteRuleSubtreeStream(adaptor,"rule relativePath");
        RewriteRuleSubtreeStream stream_step=new RewriteRuleSubtreeStream(adaptor,"rule step");
        try {
            // XPath.g:175:3: ( step -> ^( STEP step ) | ( step '/' )=> step '/' relativePath -> ^( STEP AXIS[\"PC\"] step relativePath ) | ( step '//' )=> step '//' relativePath -> ^( STEP AXIS[\"AD\"] step relativePath ) )
            int alt2=3;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==36) ) {
                int LA2_1 = input.LA(2);

                if ( (true) ) {
                    alt2=1;
                }
                else if ( (synpred1_XPath()) ) {
                    alt2=2;
                }
                else if ( (synpred2_XPath()) ) {
                    alt2=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA2_0==QName) ) {
                int LA2_2 = input.LA(2);

                if ( (true) ) {
                    alt2=1;
                }
                else if ( (synpred1_XPath()) ) {
                    alt2=2;
                }
                else if ( (synpred2_XPath()) ) {
                    alt2=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 2, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // XPath.g:175:5: step
                    {
                    pushFollow(FOLLOW_step_in_relativePath669);
                    step4=step();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_step.add(step4.getTree());


                    // AST REWRITE
                    // elements: step
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 176:3: -> ^( STEP step )
                    {
                        // XPath.g:176:6: ^( STEP step )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STEP, "STEP"), root_1);

                        adaptor.addChild(root_1, stream_step.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // XPath.g:177:5: ( step '/' )=> step '/' relativePath
                    {
                    pushFollow(FOLLOW_step_in_relativePath694);
                    step5=step();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_step.add(step5.getTree());
                    char_literal6=(Token)match(input,34,FOLLOW_34_in_relativePath696); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_34.add(char_literal6);

                    pushFollow(FOLLOW_relativePath_in_relativePath698);
                    relativePath7=relativePath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_relativePath.add(relativePath7.getTree());


                    // AST REWRITE
                    // elements: step, relativePath
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 178:3: -> ^( STEP AXIS[\"PC\"] step relativePath )
                    {
                        // XPath.g:178:6: ^( STEP AXIS[\"PC\"] step relativePath )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STEP, "STEP"), root_1);

                        adaptor.addChild(root_1, (Object)adaptor.create(AXIS, "PC"));
                        adaptor.addChild(root_1, stream_step.nextTree());
                        adaptor.addChild(root_1, stream_relativePath.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 3 :
                    // XPath.g:179:5: ( step '//' )=> step '//' relativePath
                    {
                    pushFollow(FOLLOW_step_in_relativePath729);
                    step8=step();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_step.add(step8.getTree());
                    string_literal9=(Token)match(input,35,FOLLOW_35_in_relativePath731); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_35.add(string_literal9);

                    pushFollow(FOLLOW_relativePath_in_relativePath733);
                    relativePath10=relativePath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_relativePath.add(relativePath10.getTree());


                    // AST REWRITE
                    // elements: relativePath, step
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 180:3: -> ^( STEP AXIS[\"AD\"] step relativePath )
                    {
                        // XPath.g:180:6: ^( STEP AXIS[\"AD\"] step relativePath )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STEP, "STEP"), root_1);

                        adaptor.addChild(root_1, (Object)adaptor.create(AXIS, "AD"));
                        adaptor.addChild(root_1, stream_step.nextTree());
                        adaptor.addChild(root_1, stream_relativePath.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "relativePath"

    public static class absolutePath_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "absolutePath"
    // XPath.g:183:1: fragment absolutePath : '/' relativePath -> ^( STEP AXIS[\"PC\"] NAME[\"_root\"] relativePath ) ;
    public final XPathParser.absolutePath_return absolutePath() throws RecognitionException {
        XPathParser.absolutePath_return retval = new XPathParser.absolutePath_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal11=null;
        XPathParser.relativePath_return relativePath12 = null;


        Object char_literal11_tree=null;
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_relativePath=new RewriteRuleSubtreeStream(adaptor,"rule relativePath");
        try {
            // XPath.g:185:3: ( '/' relativePath -> ^( STEP AXIS[\"PC\"] NAME[\"_root\"] relativePath ) )
            // XPath.g:185:5: '/' relativePath
            {
            char_literal11=(Token)match(input,34,FOLLOW_34_in_absolutePath764); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_34.add(char_literal11);

            pushFollow(FOLLOW_relativePath_in_absolutePath766);
            relativePath12=relativePath();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_relativePath.add(relativePath12.getTree());


            // AST REWRITE
            // elements: relativePath
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 186:3: -> ^( STEP AXIS[\"PC\"] NAME[\"_root\"] relativePath )
            {
                // XPath.g:186:6: ^( STEP AXIS[\"PC\"] NAME[\"_root\"] relativePath )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STEP, "STEP"), root_1);

                adaptor.addChild(root_1, (Object)adaptor.create(AXIS, "PC"));
                adaptor.addChild(root_1, (Object)adaptor.create(NAME, "_root"));
                adaptor.addChild(root_1, stream_relativePath.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "absolutePath"

    public static class step_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "step"
    // XPath.g:189:1: fragment step : nodeTest ( predicate )* -> NAME[$nodeTest.text] ( predicate )* ;
    public final XPathParser.step_return step() throws RecognitionException {
        XPathParser.step_return retval = new XPathParser.step_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        XPathParser.nodeTest_return nodeTest13 = null;

        XPathParser.predicate_return predicate14 = null;


        RewriteRuleSubtreeStream stream_nodeTest=new RewriteRuleSubtreeStream(adaptor,"rule nodeTest");
        RewriteRuleSubtreeStream stream_predicate=new RewriteRuleSubtreeStream(adaptor,"rule predicate");
        try {
            // XPath.g:191:3: ( nodeTest ( predicate )* -> NAME[$nodeTest.text] ( predicate )* )
            // XPath.g:191:5: nodeTest ( predicate )*
            {
            pushFollow(FOLLOW_nodeTest_in_step800);
            nodeTest13=nodeTest();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_nodeTest.add(nodeTest13.getTree());
            // XPath.g:191:14: ( predicate )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==37) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // XPath.g:191:14: predicate
            	    {
            	    pushFollow(FOLLOW_predicate_in_step802);
            	    predicate14=predicate();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_predicate.add(predicate14.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);



            // AST REWRITE
            // elements: predicate
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 191:25: -> NAME[$nodeTest.text] ( predicate )*
            {
                adaptor.addChild(root_0, (Object)adaptor.create(NAME, (nodeTest13!=null?input.toString(nodeTest13.start,nodeTest13.stop):null)));
                // XPath.g:191:49: ( predicate )*
                while ( stream_predicate.hasNext() ) {
                    adaptor.addChild(root_0, stream_predicate.nextTree());

                }
                stream_predicate.reset();

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "step"

    public static class nodeTest_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "nodeTest"
    // XPath.g:195:1: fragment nodeTest : ( '@' )? ( QName ':' )? QName ;
    public final XPathParser.nodeTest_return nodeTest() throws RecognitionException {
        XPathParser.nodeTest_return retval = new XPathParser.nodeTest_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal15=null;
        Token QName16=null;
        Token char_literal17=null;
        Token QName18=null;

        Object char_literal15_tree=null;
        Object QName16_tree=null;
        Object char_literal17_tree=null;
        Object QName18_tree=null;

        try {
            // XPath.g:197:3: ( ( '@' )? ( QName ':' )? QName )
            // XPath.g:197:5: ( '@' )? ( QName ':' )? QName
            {
            root_0 = (Object)adaptor.nil();

            // XPath.g:197:5: ( '@' )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==36) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // XPath.g:197:5: '@'
                    {
                    char_literal15=(Token)match(input,36,FOLLOW_36_in_nodeTest830); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal15_tree = (Object)adaptor.create(char_literal15);
                    adaptor.addChild(root_0, char_literal15_tree);
                    }

                    }
                    break;

            }

            // XPath.g:197:10: ( QName ':' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==QName) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==Colon) ) {
                    alt5=1;
                }
            }
            switch (alt5) {
                case 1 :
                    // XPath.g:197:11: QName ':'
                    {
                    QName16=(Token)match(input,QName,FOLLOW_QName_in_nodeTest834); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    QName16_tree = (Object)adaptor.create(QName16);
                    adaptor.addChild(root_0, QName16_tree);
                    }
                    char_literal17=(Token)match(input,Colon,FOLLOW_Colon_in_nodeTest836); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal17_tree = (Object)adaptor.create(char_literal17);
                    adaptor.addChild(root_0, char_literal17_tree);
                    }

                    }
                    break;

            }

            QName18=(Token)match(input,QName,FOLLOW_QName_in_nodeTest840); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            QName18_tree = (Object)adaptor.create(QName18);
            adaptor.addChild(root_0, QName18_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "nodeTest"

    public static class predicate_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "predicate"
    // XPath.g:200:1: fragment predicate : '[' expr ']' -> ^( PREDICATE expr ) ;
    public final XPathParser.predicate_return predicate() throws RecognitionException {
        XPathParser.predicate_return retval = new XPathParser.predicate_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal19=null;
        Token char_literal21=null;
        XPathParser.expr_return expr20 = null;


        Object char_literal19_tree=null;
        Object char_literal21_tree=null;
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // XPath.g:202:3: ( '[' expr ']' -> ^( PREDICATE expr ) )
            // XPath.g:202:5: '[' expr ']'
            {
